fix: text align footer

--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,7 @@
 }
 
 footer {
+  text-align: center;
   max-width: 30em;
   margin: 0 auto;
   margin-top: 3em;
